# kitconcept.solr

./: .gitignore  .meta.toml  CHANGELOG.md  CHANGES.md  CLAUDE.md  CONTRIBUTORS.md  MANIFEST.in  Makefile  README.md  README.rst  TBD.md  base.cfg  buildout.cfg  constraints-5.2.txt  constraints-6.0.txt  constraints.txt  docker-compose-acceptance.yml  docker-compose-ci.yml  docker-compose-dev.yml  docker-compose-solr.yml  docker-compose.yml  instance.yaml  mx.ini  pyproject.toml  repository.toml  requirements-5.2.txt  requirements.txt  setup.py  solr-7.7.x.cfg  solr-8.11.x.cfg  solr-9.0.x.cfg  solr-9.1.x.cfg  towncrier.toml  tox.ini
backend/: CHANGELOG.md  CHANGES.md  Dockerfile  Dockerfile.acceptance  LICENSE.md  Makefile  README.md  instance.yaml  pyproject.toml  requirements-5.2.txt
backend/news/: +add-navigation-with-excluded.feature  +fhnw-improvements-2.feature  +fhnw-improvements.feature  +fix-tikka-sec-vulnerability.bugfix  +fix_suggestion_service.bugfix  +github.internal  39.feature  63.bugfix
backend/scripts/: create_site.py  solr_activate_and_reindex.py
backend/src/kitconcept/solr/: __init__.py  configure.zcml  interfaces.py  reindex_helpers.py  setuphandlers.py  testing.py
backend/src/kitconcept/solr/indexers/: configure.zcml  text.py
backend/src/kitconcept/solr/profiles/default/: metadata.xml
backend/src/kitconcept/solr/profiles/default/registry/: collective.solr.xml  kitconcept.solr.interfaces.IKitconceptSolrSettings.xml
backend/src/kitconcept/solr/profiles/testing/: metadata.xml  types.xml
backend/src/kitconcept/solr/profiles/uninstall/: browserlayer.xml
backend/src/kitconcept/solr/services/: configure.zcml  navigation_with_excluded.py  site.py  solr.py  solr_highlighting_utils.py  solr_utils.py  solr_utils_extra.py  suggest.py
backend/src/kitconcept/solr/upgrades/: __init__.py  configure.zcml
backend/tests/: conftest.py
backend/tests/services/: conftest.py
backend/tests/services/content_filters/: conftest.py  test_endpoint_contentfields.py  test_endpoint_portaltype.py
backend/tests/services/custom_config/: test_endpoint_custom.py  test_endpoint_first_tab.py
backend/tests/services/default_config/: test_endpoint_default.py
backend/tests/services/encoding/: conftest.py
backend/tests/services/extra_conditions/: conftest.py  test_extra_conditions.py
backend/tests/services/facet_conditions/: conftest.py  test_facet_conditions.py
backend/tests/services/highlighting/: conftest.py  test_endpoint_highlighting.py  test_endpoint_highlighting_alternate_field.py
backend/tests/services/language/: conftest.py
backend/tests/services/local_search/: test_endpoint_local.py
backend/tests/services/navigation/: test_services_navigation.py
backend/tests/services/permission/: conftest.py  test_endpoint_permissions.py
backend/tests/services/prevent_injection/: conftest.py  test_prevent_injection.py
backend/tests/services/roles_and_users/: conftest.py  test_roles_and_users.py
backend/tests/services/spellcheck/: test_spellcheck.py
backend/tests/services/suggest/: test_suggest.py
backend/tests/services/vocabularies/: test_vocabularies.py
backend/tests/setup/: test_setup_install.py
backend/tests/utils/: conftest.py  test_utils.py  test_utils_emptylabels.py  test_utils_emptysearchtabs.py  test_utils_escape.py  test_utils_extra_conditions.py  test_utils_facet_conditions.py  test_utils_fieldlwithcomma.py  test_utils_missinglabels.py  test_utils_replace_reserved.py  test_utils_vocabularies.py
docs/: LICENSE.rst  Makefile  README.md  index.rst  pyproject.toml
frontend/: .eslintrc.js  CHANGELOG.md  Dockerfile  Makefile  README.md  cypress.config.js  package.json  pnpm-lock.yaml
markdown-docs/: INSTRUCTIONS.md  README.md
news/: +acceptance-tika-orphan.internal  +addDenseVectorField.feature  +addExtraContactFieldsPerson.feature  +addResponsibilitiesField.feature  (+24 more)
(+128 files in other folders)
